--- a/other/aboutme.html
+++ b/other/aboutme.html
@@ -22,18 +22,18 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="index.html">HOME</a>
+        <a class="nav-link" href="../index.html">HOME</a>
         <li class="nav-item">
-          <a class="nav-link" href="portfolio.html">PORTFOLIO</a>
+          <a class="nav-link" href="other/portfolio.html">PORTFOLIO</a>
         </li>
       <li class="nav-item">
-        <a class="nav-link" href="cv.html">SKILLS & CAPABILITIES</a>
+        <a class="nav-link" href="other/cv.html">SKILLS & CAPABILITIES</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="edtech.html">EDTECH</a>
+        <a class="nav-link" href="other/edtech.html">EDTECH</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="aboutme.html">ABOUT JUSTIN</a>
+        <a class="nav-link" href="other/aboutme.html">ABOUT JUSTIN</a>
       </li>
     </ul>
   </div>
