--- a/other/cv.html
+++ b/other/cv.html
@@ -22,7 +22,7 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="index.html">HOME</a>
+        <a class="nav-link" href="../index.html">HOME</a>
         <li class="nav-item">
           <a class="nav-link" href="portfolio.html">PORTFOLIO</a>
         </li>
