--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
       <li class="nav-item">
         <a class="nav-link" href="index.html">HOME</a>
         <li class="nav-item">
-          <a class="nav-link" href="other/portfolio.html">PORTFOLIO</a>
+          <a class="nav-link" href="portfolio.html">PORTFOLIO</a>
         </li>
       <li class="nav-item">
-        <a class="nav-link" href="other/cv.html">SKILLS & CAPABILITIES</a>
+        <a class="nav-link" href="cv.html">SKILLS & CAPABILITIES</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="other/edtech.html">EDTECH</a>
+        <a class="nav-link" href="edtech.html">EDTECH</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="other/aboutme.html">ABOUT JUSTIN</a>
+        <a class="nav-link" href="aboutme.html">ABOUT JUSTIN</a>
       </li>
     </ul>
   </div>
@@ -56,7 +56,7 @@
         <div class="card-body">
           <h4 class="card-title"><b>Portfolio</b></h4>
           <h6><p class="card-text">Sample work on Geographic Information System and others.</p></h6>
-          <a href="other/portfolio.html" class="btn btn-info">Go</a>
+          <a href="portfolio.html" class="btn btn-info">Go</a>
         </div>
       </div>
     </div>
