--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
     <div class="col-sm-3">
       <div class="card" style = "width:15rem;height:23rem">
-        <img class="card-img-top" src="images/storymap.jpg" alt="Card image cap" height = "180" width = "100">
+        <img class="card-img-top" src="images/storymap.JPG" alt="Card image cap" height = "180" width = "100">
         <div class="card-body" >
           <h4 class="card-title"><b>Story Map</b></h4>
           <h6><p class="card-text">Story web map of Korea made with Leaflet and Google Sheets.</p></h6>
