--- a/edtech.html
+++ b/edtech.html
@@ -54,9 +54,9 @@
         <div class = "row">
         <div class = "column-1"><img class = "snapshot" src = "images/book.jpg" style = "margin-top:20px margin-left:20px" height = "200" width = "150">
         </div>
-        <div class = "column-2"><img class = "snapshot" src = "images/google2.jpg" style="margin-top:20px" height = "200" width = "250">
+        <div class = "column-2"><img class = "snapshot" src = "images/google2.JPG" style="margin-top:20px" height = "200" width = "250">
         </div>
-        <div class = "column-3"><img class = "snapshot" src = "images/google1.jpg" style="margin-top:20px" height = "200" width = "250">
+        <div class = "column-3"><img class = "snapshot" src = "images/google1.JPG" style="margin-top:20px" height = "200" width = "250">
         </div>
         </div>
 
