--- a/aboutme.html
+++ b/aboutme.html
@@ -47,7 +47,7 @@
       <div class = "column-3">
       <img class = "snapshot" src = "images/justin.jpg" alt = "justin picture" style="margin-top:50px">
       </div>
-      <p class = "col-9" style="margin-top:50px"><h6>My name is Justin and I am a student in the 2-year Geographic Sciences program at Centre of Geographic Sciences(COGS)
+      <p class = "col-9" style="margin-top:50px">My name is Justin and I am a student in the 2-year Geographic Sciences program at Centre of Geographic Sciences(COGS)
         in Nova Scotia, Canada. Before coming to Canada, I have been a English Language Teaching (ELT) and educational technology consultant for over
         10 years in Seoul, South Korea with a MA in TESOL(Teaching English to Students in Other Languages) from Sungkyungwan University. Also, I have
         a BA in Economics from Korea University and have worked in various Korean companies, notably CJ Entertainment, a large entertainment firm based
@@ -56,7 +56,7 @@
         My first exposure in GIS and mapping was during my time in the military when I had the opportunity to work alongside U.S. Army terrain analysts.
         However, it is my recent experience with Google Earth and Google Maps that led me to pursue a career in GIS and beyond. I am also passionate
         about sharing knowledge and helping other, which prompt me to become an International Student Ambassador for COGS. During my free time, I enjoy
-      listening to good music, mostly classical music and  jazz. </h6></p>
+      listening to good music, mostly classical music and  jazz.</p>
 
       <div style="width:950px; margin:0 auto;"><a href="mailto:justin.s.chang@gmailcom" class="btn btn-info">Send Email</a></div>
 
