--- a/leafletmap/leaflet.html
+++ b/leafletmap/leaflet.html
@@ -31,25 +31,25 @@
 <body>
 
 <nav class="navbar navbar-expand-md bg-info navbar-light">
-  <a class="navbar-brand" href="#"><h2>Welcome to Justin' Portfolio</h2></a>
+  <div style="margin-left:50px" ><a class="navbar-brand"><h4><b>Justin's Portfolio</b></h4></a></div>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="../index.html">Home</a>
+        <a class="nav-link" href="../index.html">HOME</a>
+        <li class="nav-item">
+          <a class="nav-link" href="../portfolio.html">PORTFOLIO</a>
+        </li>
       <li class="nav-item">
-        <a class="nav-link" href="../aboutme.html">About Justin</a>
+        <a class="nav-link" href="../cv.html">SKILLS & CAPABILITIES</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../cv.html">Curriculum Vitae</a>
+        <a class="nav-link" href="../edtech.html">EDTECH</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../portfolio.html">Portfolio</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../edtech.html">Edtech</a>
+        <a class="nav-link" href="../aboutme.html">ABOUT JUSTIN</a>
       </li>
     </ul>
   </div>
