--- a/cv.html
+++ b/cv.html
@@ -40,13 +40,17 @@
   </nav>
 
   <div class= "container">
+    <div class = "row">
+      <!-- <div style="margin-top:50px">
+        <h3>Experience & Capabilities</h3>
+      </div > -->
 
-    <div style="margin-top:50px">
-    <h3 class="display-4">Experience & Capabilities</h3>
-
-    </div >
-    <div style="margin-top:30px"><a href="https://www.linkedin.com/in/justinsschang/" target="_blank" class="btn btn-info">Linkedin Profile</a></div>
-
+      <div class ="column" style="margin-top:50px">
+      <h3 class="display-4">Skills & Capabilities</h3>
+      </div>
+      <div class = "column-1" style="margin-top:70px"><a href="https://www.linkedin.com/in/justinsschang/" target="_blank" class="btn btn-info">Linkedin Profile</a>
+      </div>
+    </div>
 
     <div class ="card" style="margin-top:50px">
       <div class = "card-header">
@@ -120,9 +124,15 @@
       <h4><b>GIS Summer Student at Halifax Water</b></h4>
     </div>
     <div class="card-body">
-          <img src="images/halifaxwater.jpg" alt="Card image cap" height = "250" width = "200">
-          <br>
+      <div class="row">
+      <div class="column-2">
+        <img src="images/halifaxwater.jpg" alt="Card image cap" height = "250" width = "200">
+      </div>
+      <div class="column-3">
       <a href="https://drive.google.com/file/d/1dEXDjylpZGsm10oaXxSrDP2ndH3UtuV-/view?usp=sharing" target="_blank" class="btn btn-info" style = "margin-top:20px">Read Article</a>
+      </div>
+      </div>
+      <br>
       <h6><ul>
         <li>Built web map and web application for asset inspection</li>
         <li>Posted an article on Pipeline Post, an internal magazine for Halifax Water</li>
@@ -137,12 +147,13 @@
     <div class="card-body">
       <div><a href="https://www.nscc.ca/explorenscc/campuses/cogs/" target="_blank"><img src = "images/cogs.jpg"></a></div>
       <h6><p><b>Diploma in Geographic Sciences (GIS Concentration)</b>,Centre of Geographic Sciences (COGS), Nova Scotia, Canada.</p>
-      <div><a href="https://www.nscc.ca/explorenscc/campuses/cogs/" target="_blank"><img src = "images/skku.jpg" height = "50" width = "50"></a></div>
+      <div><a href="https://trasol.skku.edu/trasol/index.do" target="_blank"><img src = "images/skku.jpg" height = "50" width = "50"></a></div>
       <h6><p><b>MA in TESOL(Teaching English to Speakers of Other Languages)</b>, Sungkyunkwan University, Seoul, Korea.</p>
-      <div><a href="https://www.nscc.ca/explorenscc/campuses/cogs/" target="_blank"><img src = "images/korea.jpg" height = "50" width = "100"></a></div>
+      <div><a href="http://econ.korea.ac.kr/econ/?page_id=57180&lang=en" target="_blank"><img src = "images/korea.jpg" height = "50" width = "100"></a></div>
       <h6><p><b>BA in Economics</b>,Korea University, Seoul, Korea.</p></h6>
     </div>
   </div>
+      <br>
       <footer><h6>&copy; 2020 Justin Chang</h6></footer>
 </div>
 <div>
