--- a/leafletmap/leaflet.html
+++ b/leafletmap/leaflet.html
@@ -31,53 +31,48 @@
 <body>
 
 <nav class="navbar navbar-expand-md bg-info navbar-light">
-  <a class="navbar-brand" href="#"><h2>Welcome to Justin' Portfolio</h2></a>
+  <div style="margin-left:50px" ><a class="navbar-brand"><h4><b>Justin's Portfolio</b></h4></a></div>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="../index.html">Home</a>
+        <a class="nav-link" href="../index.html">HOME</a>
+        <li class="nav-item">
+          <a class="nav-link" href="../portfolio.html">PORTFOLIO</a>
+        </li>
       <li class="nav-item">
-        <a class="nav-link" href="../aboutme.html">About Justin</a>
+        <a class="nav-link" href="../cv.html">SKILLS & CAPABILITIES</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../cv.html">Curriculum Vitae</a>
+        <a class="nav-link" href="../edtech.html">EDTECH</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../portfolio.html">Portfolio</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../edtech.html">Edtech</a>
+        <a class="nav-link" href="../aboutme.html">ABOUT JUSTIN</a>
       </li>
     </ul>
   </div>
   </nav>
 
 
-<h4 margin>Boat Facilities in Halifax Regional Municipality</h4>
+
 <!-- Create a div for your map. Stylize by #id (#map) in stylesheet -->
 
+<div class = "container">
+  <h4><b>Boat Facilities in Halifax Regional Municipality</b></h4>
+  <div class = "row">
+    <div class = "column" >
+      <div id="map" ></div>
+    </div>
 
-<div id="map" class = "column"></div>
-
-<div class = "column" "text-align: left"> <p>  For this map, a map of boat facilities in Halifax Regional Municipality, Nova Scotia, Canada were mapped using open data from
-<a href="http://catalogue-hrm.opendata.arcgis.com" target="_blank">Halifax Open Data Portal</a>. The data was downloaded as a shapefile then it was converted to a GeoJSON file using QGIS. Using the Atom text editor, the Geojson file was converted to JavaScript file. Then the basis of the web map was made customizing the basic template provided by <a href="https://leafletjs.com/" target="_blank">Leaflet</a>. Markers, marker clusters, scale, mouse position control and legend were added to the map. Markers were created/edited using Adobe Illustrator and “if” statement was used to show different attributes on a map. As the original data regarding the attributes(Boat Dock, Boat Launch and Wharf) were strings, each form of boat facility was given a coded value to execute the “if” statement in JavaScript.
-Also in the process, a basemap with multiple basemap layers were created to toggle between different basemap layers.
-<br>
-<br>
-<br>
-<div align><a href="https://www.nscc.ca/explorenscc/campuses/cogs/" target="_blank"><img src = "images/cogs.jpg"></a></div>
-<br>
-<h8><div>&copy; 2020 Justin Chang</div></h8>
-</p>
-
-
-
+    <div class = "column-2" ><p><h6>For this map, a map of boat facilities in Halifax Regional Municipality, Nova Scotia, Canada were mapped using open data from
+    <a href="http://catalogue-hrm.opendata.arcgis.com" target="_blank">Halifax Open Data Portal</a>. The data was downloaded as a shapefile then it was converted to a GeoJSON file using QGIS. Using the Atom text editor, the Geojson file was converted to JavaScript file. Then the basis of the web map was made customizing the basic template provided by <a href="https://leafletjs.com/" target="_blank">Leaflet</a>. Markers, marker clusters, scale, mouse position control and legend were added to the map. Markers were created/edited using Adobe Illustrator and “if” statement was used to show different attributes on a map. As the original data regarding the attributes(Boat Dock, Boat Launch and Wharf) were strings, each form of boat facility was given a coded value to execute the “if” statement in JavaScript.
+    Also in the process, a basemap with multiple basemap layers were created to toggle between different basemap layers.</h6></p>
+   </div>
+ </div>
+ <div><footer><h6>&copy; 2020 Justin Chang</h6></footer></div>
 </div>
-</div>
-
 
 <!-- Load scripts. The order in which you load scripts matters. Load any necessary JQuery scripts first. Code is much cleaner if scripts kept as .js in js folder within project. script src -->
 <!-- <script src="js/parks.js" charset="utf-8"></script>
