--- a/aboutme.html
+++ b/aboutme.html
@@ -42,23 +42,32 @@
 
 
   <div class= "container">
-    <h3 class="display-4" style="margin-top:50px">About Justin</h3>
+
     <div class = "row">
-      <div class = "column-3">
-      <img class = "snapshot" src = "images/justin.jpg" alt = "justin picture" style="margin-top:50px">
+      <div class="column-11"><h3 class="display-4" style="margin-top:50px">About Justin</h3></div>
+      <div class = "column-11">
+        <img class = "snapshot" src = "images/justin.jpg" alt = "justin picture" style="margin-top:50px">
       </div>
-      <p class = "col-9" style="margin-top:50px">My name is Justin and I am a student in the 2-year Geographic Sciences program at Centre of Geographic Sciences(COGS)
+      <div class = "column-11">
+        <img class = "snapshot" src = "images/justin2.jpg" alt = "justin picture" style="margin-top:50px" height = "300" width = "250">
+      </div>
+
+      <div class = "column-12"><h6><p style="margin-top:50px">My name is Justin and I am a student in the 2-year Geographic Sciences program at <a href="https://www.nscc.ca/explorenscc/campuses/cogs/" target="_blank">Centre of Geographic Sciences(COGS) </a>
         in Nova Scotia, Canada. Before coming to Canada, I have been a English Language Teaching (ELT) and educational technology consultant for over
         10 years in Seoul, South Korea with a MA in TESOL(Teaching English to Students in Other Languages) from Sungkyungwan University. Also, I have
         a BA in Economics from Korea University and have worked in various Korean companies, notably CJ Entertainment, a large entertainment firm based
-        in South Korea. I am also a Google Certified Trainer and a member of Google Earth Education Community, having trained numerous Koreans and
+        in South Korea. I am also a <a href="https://teachercenter.withgoogle.com/certification_trainer" target="_blank">Google Certified Trainer </a> and a member of Google Earth Education Community, having trained numerous Koreans and
         Canadians to the world of Google by training them how to use Google docs, slides, sheets and YouTube to enhance their teaching experience.
         My first exposure in GIS and mapping was during my time in the military when I had the opportunity to work alongside U.S. Army terrain analysts.
         However, it is my recent experience with Google Earth and Google Maps that led me to pursue a career in GIS and beyond. I am also passionate
-        about sharing knowledge and helping other, which prompt me to become an International Student Ambassador for COGS. During my free time, I enjoy
-        listening to good music, mostly classical music and  jazz. </p>
-
-      <div style="width:950px; margin:0 auto;"><a href="mailto:justin.s.chang@gmailcom" class="btn btn-info">Send Email</a></div>
+        about sharing knowledge and helping other, which lead to become the first <a href="http://international.nscc.ca/ambassadors/" target="_blank">International Student Ambassador </a> for COGS. During my free time, I enjoy
+        listening to good music, mostly classical music and  jazz. </p></h6>
+      </div>
+      <br>
+      <br>
+        <div class="column-13">
+          <div style="width:950px; margin:0 auto;"><a href="mailto:justin.s.chang@gmailcom" class="btn btn-info">Send Email</a></div>
+        </div>
 
 
     </div>
