--- a/edtech.html
+++ b/edtech.html
@@ -39,30 +39,52 @@
   </div>
   </nav>
 
-
-
   <div class= "container">
-    <div style="margin-top:50px">
-    <h3 class="display-4">Edtech</h3>
+
+    <div class = "row">
+
+      <div style="margin-top:50px">
+        <h3 class="display-4">Edtech & Other Projects</h3>
+      </div>
+      <div class = "column-4"><a href="https://www.google.com/edu/" target="_blank"><img src = "images/g1.png" style = "margin-top:20px" height = "100" width = "100"></a>
+      </div>
+      <div class = "column-5"><a href="https://www.google.com/edu/" target="_blank"><img src = "images/g2.png" style = "margin-top:20px" height = "100" width = "100"></a>
+      </div>
+      <div class = "column-6"><a href="https://www.google.com/edu/" target="_blank"><img src = "images/g3.png" style = "margin-top:20px" height = "100" width = "100"></a>
+      </div>
+      <div class = "column-7"><a href="https://www.google.com/edu/" target="_blank"><img src = "images/g4.png" style = "margin-top:20px" height = "100" width = "100"></a>
+      </div>
+    </div>
+    <div class="row">
+      <div class ="card col-6" style="margin-top: 50px">
+        <div class = "card-header">
+          <h4><b>Halifax Open Restaurant Map during COVID-19</b></h4>
+        </div>
+
+        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1cO2Nnemm8UDrAjUSdSfmbC4DEOIoPaeB" width="540" height="480"></iframe>
+        <div class="card-body">
+            <h6><p>
+              COVID 19 virus has affected communities around the world. To help many businesses in Halifax Regional Municipality to stay open,
+            <a href="https://halifax.retales.ca/" target="_blank">Halifax Retales</a> set up a page to help Haligonians and Nova Scotians get access to restaurants through take-outs and deliveries options.
+              This is a map made with data from the website using Google Forms, Google Sheets and Google's My Maps function.
+        </p></h6>
+      </div>
     </div>
 
-    <div class ="card" style="margin-top:50px">
+    <div class ="card col-6" style="margin-top: 50px">
       <div class = "card-header">
-        <h4><b>Books</b></h4>
+        <h4><b>Google Certified Educators Map of South Korea</b></h4>
       </div>
+      <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1NyWSKxSV9XxKbi_lnXrWkZaMuSb_R2AG" width="540" height="480"></iframe>
       <div class="card-body">
-        <div class = "row">
-        <div class = "column-1"><img class = "snapshot" src = "images/book.jpg" style = "margin-top:20px margin-left:20px" height = "200" width = "150">
-        </div>
-        <div class = "column-2"><img class = "snapshot" src = "images/google2.jpg" style="margin-top:20px" height = "200" width = "250">
-        </div>
-        <div class = "column-3"><img class = "snapshot" src = "images/google1.jpg" style="margin-top:20px" height = "200" width = "250">
-        </div>
-        </div>
-
-        <p>Co-authored a <a href="http://www.yes24.com/Product/Goods/90004431?Acode=101" target="_blank">book</a> on utilizing Google Earth and Google Maps in the classroom</p>
-
+        <h6><p>
+          For <a href="https://sites.google.com/view/gegsouthkorea" target="_blank">Google Educator Group South Korea</a>, a nonprofit group of educators dedicated in utilizing G Suite for Education,  a simple map using Google
+          Forms, Google Sheets and Google Map was made. Educators who has obtained Google Certified Educator or Trainer certification can insert their
+          information on the Google Forms template and it will populate Google Sheets, which will be then added as a layer into Google Map's My Maps.
+          Four layers were made and each layer was inserted with separate google sheets spreadsheet which was connected to the Google Forms templates.
+        </p></h6>
       </div>
+    </div>
     </div>
 
     <div class ="card" style="margin-top:50px">
@@ -70,9 +92,9 @@
         <h4><b>Google for Education</b></h4>
       </div>
       <div class="card-body">
-        <p>As a <a href="http://bit.ly/JustinChangGoogle" target="_blank">Google Certified Trainer</a>, over the years I was able to conduct seminars, webinars and produce tutorial videos on using Google
+        <h6><p>As a <a href="http://bit.ly/JustinChangGoogle" target="_blank">Google Certified Trainer</a>, over the years I was able to conduct seminars, webinars and produce tutorial videos on using Google
           tools such as Google Docs, Slides, Sheets and Google Earth for educational purposes. This pages highlights some of the presentations
-          and webinars conducted in English and Korean.</p>
+          and webinars conducted in English and Korean.</p></h6>
 
 
           <div >
@@ -94,6 +116,29 @@
                     <iframe width="500" height="315" src="https://www.youtube.com/embed/6iMonbI6Uwo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   </div>
             </div>
+      </div>
+    </div>
+
+    <div class ="card" style="margin-top:50px">
+      <div class = "card-header">
+        <h4><b>Books</b></h4>
+      </div>
+      <div class="card-body">
+        <div class = "row">
+        <div class = "column-8"><a href="http://www.yes24.com/Product/Goods/90004431?Acode=101" target="_blank"><img src = "images/book.jpg" style = "margin-top:20px margin-left:20px" height = "300" width = "250"></a>
+        </div>
+        <div class = "column-9"><img class = "snapshot" src = "images/google2.JPG" style="margin-top:20px" height = "200" width = "250">
+        </div>
+        <div class = "column-10"><img class = "snapshot" src = "images/google1.JPG" style="margin-top:20px" height = "200" width = "250">
+        </div>
+        </div>
+        <br>
+        <br>
+        <h6><ul>
+          <li>Co-authored a educational technology <a href="http://www.yes24.com/Product/Goods/90004431?Acode=101" target="_blank">book</a>  on utilizing Google Earth and Google Maps in the classroom.</li>
+          <li>Contents include using Google Earth to play games, places and explore locations.</li>
+          <li>Contents include how to make maps using Google My Maps and find out geographical coordinates.</li>
+        </ul></h6>
       </div>
     </div>
     <footer><h6>&copy; 2020 Justin Chang</h6></footer>
